fixed footer layout bug

--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -4,7 +4,6 @@
     border-left: 0;
     border-right: 0;
     border-color: $primary-colour;
-    height: 4em;
 
     //Set the footer to "Flow" as you would expect
     position: absolute;
